Changing Stings values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,23 @@
 <resources>
     <string name="app_name">NoteApp</string>
-    <string name="title">Judul</string>
-    <string name="description">Deskripsi</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
     <string name="submit">Submit</string>
-    <string name="delete">Hapus</string>
+    <string name="delete">Delete</string>
     <string name="date">Date</string>
-    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
     <string name="message_ok">OK</string>
-    <string name="cancel">Batal</string>
+    <string name="cancel">Cancel</string>
     <string name="empty">Field can not be blank</string>
     <string name="update">Update</string>
-    <string name="change">Ubah</string>
-    <string name="add">Tambah</string>
-    <string name="save">Simpan</string>
-    <string name="yes">Ya</string>
-    <string name="no">Tidak</string>
-    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
-    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
-    <string name="added">Satu item berhasil ditambahkan</string>
-    <string name="changed">Satu item berhasil diubah</string>
-    <string name="deleted">Satu item berhasil dihapus</string>
+    <string name="edit">Edit</string>
+    <string name="add">Add</string>
+    <string name="save">Save</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="message_cancel">Are you sure to cancel the changes?</string>
+    <string name="message_delete">Are you sure to delete this item?</string>
+    <string name="added">One item successfully added</string>
+    <string name="changed">One item successfully changed</string>
+    <string name="deleted">One item successfully deleted</string>
     <string name="add_note">Add Note</string>
 </resources>
